--- a/app/globals.css
+++ b/app/globals.css
@@ -38,4 +38,8 @@ body {
   .btn-text {
     @apply bg-slate-100 text-black;
   }
+
+  .btn-icon {
+    @apply p-1.5 rounded-lg bg-gray-50 hover:bg-gray-100;
+  }
 }
